@@ -763,6 +763,9 @@ Each polygon consists of the vertices as defined on that line.</p>
 
 <span class="n">dimensionspec</span> <span class="o">=</span> <span class="s1">&#39;{&#39;</span> <span class="n">dimensionlist</span> <span class="s1">&#39;}&#39;</span> <span class="p">;</span>
 
+<span class="n">bit_mask_operator</span> <span class="o">=</span> <span class="s1">&#39;=&amp;&#39;</span> <span class="o">|</span> <span class="s1">&#39;!&amp;&#39;</span> <span class="p">;</span>
+<span class="n">operator</span> <span class="o">=</span> <span class="s1">&#39;==&#39;</span> <span class="o">|</span> <span class="s1">&#39;!=&#39;</span> <span class="o">|</span> <span class="s1">&#39;&gt;=&#39;</span> <span class="o">|</span> <span class="s1">&#39;&lt;=&#39;</span> <span class="o">|</span> <span class="s1">&#39;&lt;&#39;</span> <span class="o">|</span> <span class="s1">&#39;&gt;&#39;</span> <span class="p">;</span>
+
 <span class="n">functioncall</span> <span class="o">=</span>
    <span class="s1">&#39;area_covers_area&#39;</span><span class="p">,</span> <span class="s1">&#39;(&#39;</span><span class="p">,</span> <span class="s1">&#39;(&#39;</span><span class="p">,</span> <span class="n">floatvaluelist</span><span class="p">,</span> <span class="s1">&#39;)&#39;</span><span class="p">,</span> <span class="p">[</span><span class="n">unit</span><span class="p">],</span> <span class="s1">&#39;(&#39;</span><span class="p">,</span> <span class="n">floatvaluelist</span><span class="p">,</span> <span class="s1">&#39;)&#39;</span><span class="p">,</span> <span class="p">[</span><span class="n">unit</span><span class="p">],</span> <span class="s1">&#39;)&#39;</span> <span class="o">|</span>
    <span class="s1">&#39;area_covers_area&#39;</span><span class="p">,</span> <span class="s1">&#39;(&#39;</span><span class="p">,</span> <span class="n">stringvalue</span><span class="p">,</span> <span class="s1">&#39;)&#39;</span> <span class="o">|</span>
@@ -813,8 +816,11 @@ Each polygon consists of the vertices as defined on that line.</p>
    <span class="s1">&#39;wrap&#39;</span><span class="p">,</span> <span class="s1">&#39;(&#39;</span><span class="p">,</span> <span class="n">variable</span><span class="p">,</span> <span class="p">[</span><span class="n">unit</span><span class="p">],</span> <span class="s1">&#39;,&#39;</span><span class="p">,</span> <span class="n">floatvalue</span><span class="p">,</span> <span class="s1">&#39;,&#39;</span><span class="p">,</span> <span class="n">floatvalue</span><span class="p">,</span> <span class="s1">&#39;)&#39;</span> <span class="p">;</span>
 
 <span class="n">operationexpr</span> <span class="o">=</span>
+   <span class="n">variable</span><span class="p">,</span> <span class="n">bit_mask_operator</span><span class="p">,</span> <span class="n">intvalue</span> <span class="o">|</span>
    <span class="n">variable</span><span class="p">,</span> <span class="n">operator</span><span class="p">,</span> <span class="n">value</span><span class="p">,</span> <span class="p">[</span><span class="n">unit</span><span class="p">]</span> <span class="o">|</span>
    <span class="n">variable</span><span class="p">,</span> <span class="p">[</span><span class="s1">&#39;not&#39;</span><span class="p">],</span> <span class="s1">&#39;in&#39;</span><span class="p">,</span> <span class="s1">&#39;(&#39;</span><span class="p">,</span> <span class="n">valuelist</span><span class="p">,</span> <span class="s1">&#39;)&#39;</span><span class="p">,</span> <span class="p">[</span><span class="n">unit</span><span class="p">]</span> <span class="o">|</span>
+   <span class="s1">&#39;index&#39;</span><span class="p">,</span> <span class="s1">&#39;(&#39;</span><span class="p">,</span> <span class="n">dimension</span><span class="p">,</span> <span class="s1">&#39;)&#39;</span><span class="p">,</span> <span class="n">operator</span><span class="p">,</span> <span class="n">intvalue</span> <span class="o">|</span>
+   <span class="s1">&#39;index&#39;</span><span class="p">,</span> <span class="s1">&#39;(&#39;</span><span class="p">,</span> <span class="n">dimension</span><span class="p">,</span> <span class="s1">&#39;)&#39;</span><span class="p">,</span>  <span class="p">[</span><span class="s1">&#39;not&#39;</span><span class="p">],</span> <span class="s1">&#39;in&#39;</span><span class="p">,</span> <span class="s1">&#39;(&#39;</span><span class="p">,</span> <span class="n">intvaluelist</span><span class="p">,</span> <span class="s1">&#39;)&#39;</span> <span class="o">|</span>
    <span class="n">functioncall</span> <span class="o">|</span>
    <span class="n">operationexpr</span><span class="p">,</span> <span class="s1">&#39;;&#39;</span><span class="p">,</span> <span class="n">operationexpr</span> <span class="p">;</span>
 
